# Flat_Shading_GraficaComputador

./: CMakeLists.txt  Fragment.h  README.md  main.cpp  print.h  shaders.h  triangle.h  uniform.h
